Fixed bug #23509 (exit code lost when exit() called from register_shutdown_function())