sapi/cgi/cgi_main.c
@@ -20,7 +20,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: cgi_main.c,v 1.235 2003/06/29 20:45:38 shane Exp $ */
+/* $Id: cgi_main.c,v 1.236 2003/08/01 12:26:28 iliaa Exp $ */
 
 #include "php.h"
 #include "php_globals.h"
@@ -1558,7 +1558,6 @@ consult the installation file that came with this distribution, or visit \n\
 		switch (behavior) {
 			case PHP_MODE_STANDARD:
 				php_execute_script(&file_handle TSRMLS_CC);
-				exit_status = EG(exit_status);
 				break;
 			case PHP_MODE_LINT:
 				PG(during_request_startup) = 0;
@@ -1615,6 +1614,7 @@ fastcgi_request_done:
 			}
 
 			php_request_shutdown((void *) 0);
+			exit_status = EG(exit_status);
 
 			if (SG(request_info).path_translated) {
 				free(SG(request_info).path_translated);
